--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -10,13 +10,9 @@ spring:
               username: teaman
               password: AE6y@dNf
           second:  #数据源2
-              url: jdbc:mysql://47.111.167.92:3306/chisondo?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8
-              username: teaman
-              password: AE6y@dNf
-          third:  #数据源3
-              url: jdbc:mysql://47.111.167.92:3306/chisondo?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8
-              username: teaman
-              password: AE6y@dNf
+              url: jdbc:mysql://47.111.167.92:3306/chisondo_app?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8
+              username: teaapp
+              password: G*x8IyCs1$
           initial-size: 10
           max-active: 100
           min-idle: 10
