--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,3 +1,7 @@
+chisondo:
+  server:
+    http2DevURL: http://127.0.0.1:8188/
+    oldDevReqURL: http://entrypoint.teamanworld.com:9090/TeamanAccServ/wxaccess?api=
 spring:
   redis:
       open: true  # 是否开启redis缓存  true开启   false关闭
